$Id$

MIDIboxSID V2.044
~~~~~~~~~~~~~~~~~

   o envelopes are now released properly when a note is played via the SysEx editor
     (or with the PLAY button)

   o swapped behaviour of ENC speed control again, so that encoders are at fast speed
     by default, and slow if SHIFT button pressed.
     This behaviour can now be alternated in your setup_*.asm file by changing
     the DEFAULT_SHIFT_SPEED_CONTROL_MODE option

   o implemented special encoder testmode which can be enabled with
     DEFAULT_TESTMODE_ENC_SPEED in the setup_*.asm file


MIDIboxSID V2.043
~~~~~~~~~~~~~~~~~

   o fixed NRPN handling for Multi patches

   o implemented CCs for Bassline/Drum/Multi Engine
     See doc/mbsidv2_cc_chart.txt for available CCs

   o display updated when the patch name has been changed from external


MIDIboxSID V2.042
~~~~~~~~~~~~~~~~~

  o new SysEx commands to support the Lemur Editor

  o MIDI Clock is now optionally sent with the "Out" option of the Ensemble Clk page.

  o default encoder mode is "DETENTED3" now, since it works better for most encoders
    available on the market

  o swapped behaviour of ENC speed control: encoder now at fast speed if SHIFT button is pressed


MIDIboxSID V2.041
~~~~~~~~~~~~~~~~~

  o corrected sysex handling for MIOS Studio SysEx Librarian


MIDIboxSID V2.040
~~~~~~~~~~~~~~~~~

  o fixed SysEx patch write issue which happened when patches were received
    with the common format (e.g. preset patches)


MIDIboxSID V2.039
~~~~~~~~~~~~~~~~~

  o LFO MIDI Clock Sync has been overworked, it now supports 32 different
    rates from 16 bars to 1/32 notes including triple and dotted delays!

    If the CSn flag enabled the available rates are:
    0=LFO disabled, 8=16 bars, 16=14 bars, 24=12 bars, 32=10 bars,
    40=9 bars, 48=8 bars, 56=7 bars, 64=6 bars, 72=5 bars, 80=4 bars,
    88=3.5 bars, 96=3 bars, 104=2.5 bars, 112=2 bars, 120=1.5 bars,
    128=1 bar, 136=1/2., 144=1/1T, 152=1/2, 160=1/4., 168=1/2T,